# swagger/docs/swagger.json
@@ -967,6 +967,34 @@
           }
         }
       }
+    },
+    "/grafana": {
+      "get": {
+        "tags": [
+          "Metrics Data"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "url",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
